Fixed deprecated use of new Integer() and new Long()